<resources>
    <string name="app_name">Exercisse1.2</string>

    <string name="tEmail">Email</string>
    <string name="tLogin">LOGIN</string>
    <string name="tPassword">Password</string>
    <string name="btsignin">Sig-In</string>
    <string name="regissignin">Registrasi?</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repass">Re-Password</string>
    <string name="btnregis">Registrasi</string>
    <string name="signup">Sign-Up</string>
    <string name="var1">asiig</string>

    <string name="var2">Selamat Datang, </string>
    <string name="task1">Masukkan Task</string>
    <string name="jnstask">Masukkan Jenis Task</string>
    <string name="timetask">Masukkan Time Task</string>
    <string name="fabadd"></string>
    <string name="task">Task</string>
    <string name="jenis">Jenis Task</string>
    <string name="time">Time Task</string>

    <string name="tasklist">Daftar Task</string>

    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
</resources>